<resources>
    <string name="app_name">Game Box</string>
    <string name="app_title">Game Box</string>
    <string name="bottles">Bottles</string>
    <string name="beer_pong">Beer Pong</string>
    <string name="mafia">Mafia</string>
    <string name="rules">Rules</string>
    <string name="roles">Roles</string>
    <string name="play">Play</string>
    <string name="play2">Let\'s play</string>
    <string name="beer_pong_rules">1. Take 3/6/10 cups for each team.\n\n
        2. Place cups on the two sides of the table on triangle shape.\n\n
        3. Take at least 2 ping-pong balls.\n\n
        4. Decide which team starts the game.\n\n
        5. The aim of the game is to throw the ball to every of the enemy\'s cups.\n\n
        6. Teams throws 2 balls alternately.\n\n
        7. Each turn you have 2 shots. If 2 balls fall into the same enemy\'s cup you got 1 extra shot.\n\n
        8. At the end of each turn defenders team has to drink the beer from the cups that has been "checked". They cannot throw before the cups are empty.\n\n
        9. When the ball spins around cup\'s walls the defenders team can try to blow it up. If it works, there is no "check" for attackers.\n\n
        10. The game ends when one team has no cups left. Then they lose.\n\n
        Have fun!\n
    </string>
    <string name="add_team">Add team</string>
    <string name="team_name">Team name</string>
    <string name="toast_name_not_null">Team name cannot be empty</string>
    <string name="teams">Teams</string>
    <string name="toast_max_teams_reached">Cannot add more teams</string>
    <string name="ladder_question">Which ladder you want to pick?</string>
    <string name="ladder_group">Group</string>
    <string name="ladder_championship">Championship</string>
    <string name="toast_no_teams_given">You need to add at least 2 teams</string>
    <string name="next_match">The next match</string>
    <string name="vs">VS</string>
    <string name="groups">Groups</string>
    <string name="toast_too_few_teams">Group ladder can be chosen for at least 5 teams</string>
    <string name="bottles_game_rules">1. Split into 2 teams. Everyone get a full beer.\n\n
    2. Get an empty beer can and rock/ball to throw.\n\n
    3. Place the empty can in the middle.\n\n
    4. Each team stands on the line in the equal distance from the can.\n\n
    5. One team throws the rock. If it hits and knocks over the can, the throwing team starts to drink the beer. Meanwhile one person from other team runs to the can. Makes it stand and returns to the team.\n\n
    6. When the runner crosses the line, the drinking stops.\n\n
    7. If somebody drink all his beer, he wins.\n\n
    8. If everyone from any team empties all the beers - they win.\n\n
    Good Luck ;)\n\n</string>
    <string name="mafia_roles">There are a plenty of roles available in mafia. Here are some of
        them that we have chosen to our game:\n\n
        1. Game Master - he is the master of the game. He handles the narration during the game, notes
        who\'s killed/healed etc.\n\n
        2. Cattani (cup, detective) - Game Master wakes him up once per night. Then he can check one player
        and GM shows him if he is a good or a bad character.\n\n
        3. Mafia member - It\'s a bad character. Each night mafia members wake up and decide who\'s gonna
        be killed that night.\n\n
        4. Medic - Each night he wakes up and chooses who\'s gonna be healed. He cannot heal the same
        person twice. If he heals the same person that mafia decided to kill - nobody dies that night.\n\n
        5. City member - City member has no special abilities. He can vote like everybody but he does
        not wake up during night.\n\n
        6. Sniper - Sniper has an ability to once during the day shoot somebody. If he shoots mafia member,
        then mafia member dies. If he shoots one of the "good guys" they both die.\n\n
        7. Courtesan - Courtesan wakes up once during each night and chooses someone that she sleeps with.
        When the day starts GM tells who slept with courtesan. It has no consequences and brings only
        humorous value.\n\n
        8. Jude - He is almost the same as city member. The only difference is that when Cattani "checks"
        him. GM has to say that he\'s a mafia member besides he\'s not\n\n
        9. Lawyer - Once per game when somebody is voted up to be killed, the lawyer can save him from death.
        (Then you can vote for someone else or end the day phase).\n\n
        10. Judge - Once per game the judge can use his special ability and vote as two people.\n\n
    </string>
    <string name="mafia_rules_1_head">Preparation</string>
    <string name="mafia_rules_1_body">Players sit in one room. Everyone has to see and hear everyone.
        Then they chose either they want the game master to be chosen randomly or by them. Game master
        is more passive function than the rest.</string>
    <string name="mafia_rules_2_head">Game</string>
    <string name="mafia_rules_2_body">The game is divided into rounds happening in order: assigning roles
        and then day and night alternately.</string>
    <string name="mafia_rules_3_head">Night</string>
    <string name="mafia_rules_3_body">All players close their eyes. The game master then instructs all
        mafia members to open their eyes and acknowledge their accomplices. The mafia pick a "victim"
        by silently gesturing to indicate their target and to show unanimity then close their eyes again.\n\n
        A similar process occurs for other roles with nightly actions. In the case of the seer, the game master
        may indicate the target\'s innocence or guilt by using gestures such as nodding or head shaking.\n\n
        Night may be accompanied by players tapping gently to mask sounds made by gesturing.</string>
    <string name="mafia_rules_4_head">Day</string>
    <string name="mafia_rules_4_body">The game master instructs players to open their eyes and announces
        who "died" the previous night. Discussion ensues among the living players. At any point,
        a player may accuse someone of being a mafia member and prompt others to vote to eliminate them.
        If over half of the players do so, the accused person is eliminated and night begins. Otherwise,
        the phase continues until an elimination occurs.\n\n
        According to some rules, the role of dead players are revealed; according to others, it is not.
        In both cases, dead players are not permitted to attempt to influence the remainder of the game.\n\n
        Because players have more freedom to deliberate, days tend to be longer than nights.</string>
    <string name="mafia_rules_5_head">End of the round</string>
    <string name="mafia_rules_5_body">Every round ends when one of the fractions is eliminated.</string>
    <string name="mafia_game_size">How many players including Game Master are gonna play?\n (7 \- 17)</string>
    <string name="mafia_players">Players amount</string>
    <string name="toast_incorrect_players_amount">The given players amount is incorrect</string>
    <string name="assign_roles">Assign roles</string>
    <string name="mafia_gm_static">Chosen Game Master</string>
    <string name="mafia_gm_dynamic">Chose Game Master</string>
    <string name="mafia_choose_roles1">Chose maximum</string>
    <string name="mafia_choose_roles2">special roles</string>
    <string name="mafia_choose_roles21">special roles</string>
    <string name="mafia_role_cattani">Cattani</string>
    <string name="mafia_role_medic">Medic</string>
    <string name="mafia_role_sniper">Sniper</string>
    <string name="mafia_role_courtesan">Courtesan</string>
    <string name="mafia_role_jude">Jude</string>
    <string name="mafia_role_lawyer">Lawyer</string>
    <string name="mafia_role_judge">Judge</string>
    <string name="mafia_role_mafia">Mafia Member</string>
    <string name="mafia_role_game_master">Game Master</string>
    <string name="mafia_role_city">City Member</string>
    <string name="toast_max_roles_reached">Maximum roles reached</string>
    <string name="mafia_assign_show_next">Next role</string>
    <string name="mafia_assign_show">Show role</string>
    <string name="game_master_panel">Game Master Panel</string>
    <string name="name">Name</string>
    <string name="make_day">Make Day</string>
    <string name="make_night">Make Night</string>
    <string name="healed">Healed</string>
    <string name="killed">Killed</string>
    <string name="hooked_up">Hooked up</string>
    <string name="toast_no_name_given">You must enter the name first</string>
    <string name="mafia_enter_panel">Game Master Panel</string>
    <string name="cauldron">Panoramix Cauldron</string>
    <string name="make_cauldron">Make Cauldron</string>
    <string name="how_to_make">How to make</string>
    <string name="how_to_make_description">The Panoramix Cauldron is a mixture made from mixing different alcohols.\n\n
    All you need is a big empty pot and some alcohol.\n\n
    You fill in the pot with the alcohols and stir them.\n\n</string>
    <string name="cauldron_amount">How many litres of mixture do you want to make?</string>
    <string name="litres">Litres</string>
    <string name="cauldron_alcohols">What alcohols do you want to include in cauldron?</string>
    <string name="beer">Beer</string>
    <string name="wine">Wine</string>
    <string name="vodka">Vodka</string>
    <string name="tequila">Tequila</string>
    <string name="whiskey">Whiskey</string>
    <string name="rum">Rum</string>
    <string name="juice">Juice</string>
    <string name="energy_drink">Energy Drink</string>
    <string name="gin">Gin</string>
    <string name="champagne">Champagne</string>
    <string name="drink">Make drinks</string>
    <string name="next">Next</string>
    <string name="toast_give_litres">Litres field cannot be empty</string>
    <string name="toast_too_little_litres">Litre amount is too small</string>
    <string name="toast_no_alcohols_chosen">You must chose at least one liquid</string>
    <string name="beer_lager">Lager Beer</string>
    <string name="beer_dark">Dark Beer</string>
    <string name="beer_wheat">Wheat Beer</string>
    <string name="beer_porter">Porter Beer</string>
    <string name="beer_ipa">IPA Beer</string>
    <string name="wine_red_dry">Dry Red Wine</string>
    <string name="wine_red_sweet">Sweet Red Wine</string>
    <string name="wine_white_dry">Dry White Wine</string>
    <string name="wine_white_sweet">Sweet White Wine</string>
    <string name="juice_raspberry">Raspberry Juice</string>
    <string name="juice_strawberry">Strawberry Juice</string>
    <string name="chess_timer">Chess Timer</string>
    <string name="time_adding">Time adding at the game ending</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="time_per_player">Minutes per player</string>
    <string name="mafia_new">New Game</string>
    <string name="mafia_resume">Resume Game</string>
    <string name="credits">Credits</string>
    <string name="credits_authors1">Authors of the app are</string>
    <string name="credits_authors2">Patryk Kudyk\n
        and\n
        Daniel Cyktor
    </string>
    <string name="credits_icons1">Icons were made by</string>
    <string name="credits_icons2">
        Flat Icons\n
        Smashicons\n
        Freepik\n
        Good Ware
    </string>
    <string name="credits_icons3">from flaticon.com</string>
    <string name="credits_sounds1">Sounds were made by</string>
    <string name="credits_sounds2">
        scheffler\n
        littlerobotsoundfactory\n
        joshuaempyre\n
        melack\n
        sironboy\n
        nfsmaster821\n
        thenetherchickens
    </string>
    <string name="credits_sounds3">from freesound.org</string>
    <string name="add_alcohol">Add new alcohol</string>
    <string name="save_cauldron_button">Save cauldron</string>
</resources>