<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.beerpong.BeerPongRulesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorOrangeBackground">

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.04"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/dustismo_bold"
            android:gravity="center"
            android:text="@string/rules"
            android:textSize="45dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5" />


        <View
            android:id="@+id/view6"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.06"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.76"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view6" >

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:orientation="vertical">

               <TextView
                   android:layout_marginTop="24dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_1_head"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="36dip"/>

               <TextView
                   android:layout_marginTop="12dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_1_body"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="22dip"/>

               <TextView
                   android:layout_marginTop="24dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_2_head"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="36dip"/>

               <TextView
                   android:layout_marginTop="12dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_2_body"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="22dip"/>

               <TextView
                   android:layout_marginTop="24dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_3_head"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="36dip"/>

               <TextView
                   android:layout_marginTop="12dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_3_body"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="22dip"/>

               <TextView
                   android:layout_marginTop="24dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_4_head"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="36dip"/>

               <TextView
                   android:layout_marginTop="12dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_4_body"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="22dip"/>


               <TextView
                   android:layout_marginTop="24dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_5_head"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="36dip"/>

               <TextView
                   android:layout_marginTop="12dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/mafia_rules_5_body"
                   android:fontFamily="@font/dustismo_bold"
                   android:gravity="center"
                   android:textSize="22dip"/>
           </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>