<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreditsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPinkBackground">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/credits"
                    android:gravity="center"
                    android:textSize="50dip"
                    android:fontFamily="@font/dustismo_bold"/>

                <TextView
                android:layout_marginTop="30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/credits_authors1"
                android:gravity="center"
                android:textSize="34dip"
                android:fontFamily="@font/dustismo"/>

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/credits_authors2"
                    android:gravity="center"
                    android:textSize="29dip"
                    android:fontFamily="@font/dustismo_bold"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/credits_icons1"
                    android:gravity="center"
                    android:textSize="34dip"
                    android:fontFamily="@font/dustismo"/>

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/credits_icons2"
                    android:gravity="center"
                    android:textSize="26dip"
                    android:fontFamily="@font/dustismo_bold"/>

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/credits_icons3"
                    android:gravity="center"
                    android:textSize="29dip"
                    android:fontFamily="@font/dustismo"/>


                <TextView
                    android:layout_marginTop="30dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/credits_sounds1"
                    android:gravity="center"
                    android:textSize="34dip"
                    android:fontFamily="@font/dustismo"/>

                <TextView
                    android:layout_marginTop="12dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/credits_sounds2"
                    android:gravity="center"
                    android:textSize="26dip"
                    android:fontFamily="@font/dustismo_bold"/>

                <TextView
                    android:layout_marginTop="8dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginEnd="12dp"
                    android:text="@string/credits_sounds3"
                    android:gravity="center"
                    android:textSize="29dip"
                    android:fontFamily="@font/dustismo"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="32dp"/>

            </LinearLayout>

        </ScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>