<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.beerpong.BeerPongLadderChoiceFragment">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorRedBackground">

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintWidth_percent="0.7"
            android:textSize="35dip"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/ladder_question"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2" />

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.15"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>

        <Button
            android:id="@+id/beer_pong_ladder_group"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background_red_light"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/ladder_group"
            android:textColor="@color/colorRedBackground"
            android:textSize="30dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4"
            app:layout_constraintWidth_percent="0.5"/>
        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintHeight_percent="0.08"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/beer_pong_ladder_group" />

        <Button
            android:id="@+id/beer_pong_ladder_championship"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/button_background_red_medium"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/ladder_championship"
            android:textColor="@color/colorRedBackground"
            android:textSize="30dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5"
            app:layout_constraintWidth_percent="0.5"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>